<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/item_padding"
    tools:context="io.github.jhcpokemon.expressassist.fragment.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/search_margin_top"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:textSize="18sp"
            android:text="@string/order" />

        <Spinner
            android:id="@+id/express_co_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        style="?attr/buttonBarButtonStyle"
        android:textAllCaps="false"
        android:text="@string/search" />

    <Button
        android:id="@+id/web_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        style="?attr/buttonBarButtonStyle"
        android:textAllCaps="false"
        android:text="@string/search_on_web"
        />

</LinearLayout>
