<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/item_padding"
    tools:context="io.github.jhcpokemon.expressassist.fragment.SettingFragment">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/icon_margin_top"
        android:src="@drawable/icon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="36sp" />


    <Button
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        style="?android:attr/buttonBarButtonStyle"
        android:gravity="center"
        android:paddingBottom="@dimen/item_padding"
        android:paddingTop="@dimen/item_padding"
        android:text="@string/version_code"
        android:textSize="18sp" />

    <Button
        android:id="@+id/clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_above="@id/policy"
        android:gravity="center"
        android:paddingBottom="@dimen/item_padding"
        android:paddingTop="@dimen/item_padding"
        android:text="@string/clear"
        android:textSize="18sp" />

    <Button
        android:id="@+id/policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/version"
        style="?android:attr/buttonBarButtonStyle"
        android:gravity="center"
        android:paddingBottom="@dimen/item_padding"
        android:paddingTop="@dimen/item_padding"
        android:text="@string/policy"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignTop="@id/policy"
        android:background="@color/hr_color" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignTop="@id/version"
        android:background="@color/hr_color" />

</RelativeLayout>
